--- a/package.json
+++ b/package.json
@@ -1,28 +1,29 @@
 {
-  "name": "artlit-pub",
-  "module": "index.ts",
-  "type": "module",
-  "scripts": {
-    "dev": "bun --watch run index.ts"
-  },
-  "devDependencies": {
-    "@types/bun": "^1.1.2",
-    "@types/cors": "^2.8.17",
-    "@types/express": "^4.17.21",
-    "@types/figlet": "^1.5.8",
-    "prisma": "^5.14.0",
-    "typescript": "^5.4.5"
-  },
-  "peerDependencies": {
-    "typescript": "^5.0.0"
-  },
-  "dependencies": {
-    "@prisma/client": "^5.14.0",
-    "@types/morgan": "^1.9.9",
-    "cors": "^2.8.5",
-    "express": "^4.19.2",
-    "express-validator": "^7.1.0",
-    "figlet": "^1.7.0",
-    "morgan": "^1.10.0"
-  }
+   "name": "artlit-pub",
+   "module": "index.ts",
+   "type": "module",
+   "scripts": {
+      "dev": "bun --watch run index.ts",
+      "start": "bun index.ts"
+   },
+   "devDependencies": {
+      "@types/bun": "^1.1.2",
+      "@types/cors": "^2.8.17",
+      "@types/express": "^4.17.21",
+      "@types/figlet": "^1.5.8",
+      "prisma": "^5.14.0",
+      "typescript": "^5.4.5"
+   },
+   "peerDependencies": {
+      "typescript": "^5.0.0"
+   },
+   "dependencies": {
+      "@prisma/client": "^5.14.0",
+      "@types/morgan": "^1.9.9",
+      "cors": "^2.8.5",
+      "express": "^4.19.2",
+      "express-validator": "^7.1.0",
+      "figlet": "^1.7.0",
+      "morgan": "^1.10.0"
+   }
 }
